--- a/package.json
+++ b/package.json
@@ -8,17 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
+    "axios": "^1.9.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-plus": "^2.9.10",
+    "highlight.js": "^11.11.1",
+    "katex": "^0.16.22",
+    "lodash-es": "^4.17.21",
+    "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
+    "pdfjs-dist": "^5.2.133",
+    "vue": "^3.4.21",
+    "vue-markdown-it": "^0.9.4",
+    "vue-pdf-embed": "^2.1.2",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-class-static-block": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "raw-loader": "^4.0.2"
   },
   "eslintConfig": {
     "root": true,
